--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -281,25 +281,25 @@ p {
   top: -7px;
 }
 
-@media only screen and (min-width: 768px) and (max-width: 991px), (max-width: 767px) {
-  .navbar-collapse {
-    position: absolute;
-    top: 100%;
-    right: 0;
-    max-width: 300px;
-    width: 100%;
-    background-color: var(--white);
-    z-index: 9;
-    -webkit-box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.1);
-    box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.1);
-    padding: 0px;
-    display: none;
-    border-radius: 5px;
-  }
-  .navbar-collapse.show {
-    display: block;
-  }
+
+.navbar-collapse {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  max-width: 300px;
+  width: 100%;
+  background-color: var(--white);
+  z-index: 9;
+  -webkit-box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.1);
+  padding: 0px;
+  display: none;
+  border-radius: 5px;
 }
+.navbar-collapse.show {
+  display: block;
+}
+
 
 @media only screen and (min-width: 768px) and (max-width: 991px), (max-width: 767px) {
   .navbar-nav {
@@ -327,7 +327,7 @@ p {
 .navbar-nav .nav-item > a {
   font-size: 16px;
   font-weight: 400;
-  color: var(--white);
+  color: var(--heading-color);
   -webkit-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
   padding: 25px 8px;
@@ -343,7 +343,7 @@ p {
 }
 
 .navbar-nav .nav-item > a:hover, .navbar-nav .nav-item > a.active {
-  color: var(--white);
+  color: var(--heading-color);
   opacity: 0.5;
 }
 
@@ -357,7 +357,7 @@ p {
 .navbar-nav .nav-item .ud-submenu {
   position: absolute;
   width: 250px;
-  background: var(--white);
+  background: var(--black);
   top: 110%;
   padding: 20px 30px;
   -webkit-box-shadow: 0 15px 44px rgba(140, 140, 140, 0.18);
@@ -397,7 +397,7 @@ p {
 }
 
 .navbar-nav .nav-item:hover > a {
-  color: var(--white);
+  color: var(--heading-color);
   opacity: 0.5;
 }
 
