--- a/assets/css/complemet.css
+++ b/assets/css/complemet.css
@@ -1,3 +1,4 @@
+/* FORM */
 .ud-contact-form #email {
     padding-left: 5px;
 }
@@ -23,4 +24,30 @@
 .ud-contact-form .successMsg {
     margin-top: 10px;
     color: green;
+}
+
+/* BUTTONS */
+
+button > * {
+    pointer-events: none;
+}
+
+/* FOCUS */
+
+*:focus {
+    outline: 2px solid indigo !important;
+}
+
+[tabindex="-1"] {
+    pointer-events: none;
+}
+
+/* SR COPY */
+.sr-only{
+    position:absolute !important;
+    clip:rect(1px, 1px, 1px, 1px);
+    padding:0 !important;border:0 !important;
+    height:1px !important;
+    width:1px !important;
+    overflow:hidden
 }
