--- a/assets/css/complemet.css
+++ b/assets/css/complemet.css
@@ -23,3 +23,13 @@ p {
 button > * {
     pointer-events: none;
 }
+
+/* SR COPY */
+.sr-only{
+    position:absolute !important;
+    clip:rect(1px, 1px, 1px, 1px);
+    padding:0 !important;border:0 !important;
+    height:1px !important;
+    width:1px !important;
+    overflow:hidden
+}
