--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -1,5 +1,5 @@
 /*===========================
-  COMMON css 
+  COMMON css
 ===========================*/
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap");
 
@@ -160,7 +160,8 @@ p {
   width: 40px;
   height: 40px;
   line-height: 40px;
-  background: var(--primary-color);
+  // background: var(--primary-color);
+  background: #11b2e6;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
   text-align: center;
   justify-content: center;
