--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -8,7 +8,7 @@
 
 ======== */
 /*===========================
-  COMMON css 
+  COMMON css
 ===========================*/
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap");
 :root {
@@ -178,7 +178,8 @@ p {
   width: 40px;
   height: 40px;
   line-height: 40px;
-  background: var(--primary-color);
+  background: #11b2e6;
+  /* background: var(--primary-color); */
   -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
   text-align: center;
