--- a/assets/scss/_features.scss
+++ b/assets/scss/_features.scss
@@ -33,6 +33,7 @@
   p {
     font-size: 20px;
     line-height: 30px;
+    color: #000;
 
     @media #{$xs} {
       font-size: 16px;
@@ -97,6 +98,7 @@
     font-size: 16px;
     line-height: 24px;
     margin-bottom: 40px;
+    color: #000;
   }
 
   .ud-feature-link {
