--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -53,7 +53,7 @@ textarea:focus,
 button:focus,
 .navbar-toggler:focus {
   text-decoration: none;
-  outline: none;
+  /* outline: none; */
   -webkit-box-shadow: none;
           box-shadow: none;
 }
@@ -2609,5 +2609,18 @@ p {
     font-size: 14px;
     padding: 10px 20px;
   }
+}
+
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
 /*# sourceMappingURL=ud-styles.css.map */
